@@ -1,2 +1,13 @@
 # Budget-Tracker
 Final project for OOP Spring 2025 - Budget Tracker app
+
+## Java Version
+Java 21
+
+## JavaFX
+Download JavaFX SDK 21 from https://gluonhq.com/products/javafx/
+
+## Setup
+- Add the JavaFX SDK `lib` folder as a Library in IntelliJ.
+- In Run Configurations, add VM options:
+  --module-path /path/to/javafx-sdk-21/lib --add-modules javafx.controls,javafx.fxml
